--- a/src/template.html
+++ b/src/template.html
@@ -89,7 +89,7 @@
                 autonomous and critical thinker who asks innovative, tangible, and defined questions in specific
                 research contexts.
                 <br>
-                In between work and study, I deeply engaged with the arts and travel. An avid piano player
+                In between work and study, I deeply engage with the arts and travel. An avid piano player
                 of classical and soundtrack music, I enjoy mixing classical elements into contemporary pieces in 
                 songwriting. In a different manner of songwriting, I often translate Chinese songs or mimic poetry
                 when writing song lyrics. I have further explored this love of creative writing in a few children's books
@@ -129,7 +129,7 @@
                     <b>Restaurant Weekend Destinations:</b>
                     <br/> Let's go on a weekend excursion to eat at Michellin-Star restaurants! 
                     Before we head out, though, where should we go? What cuisine should we taste?
-                    This project demonstrates how one can choose Michellin-Star restaurants and 
+                    <br/>This project demonstrates how one can choose Michellin-Star restaurants and 
                     destinations using fundamentals of data science principles and visualization techniques.
                   </p>
                 </div>
@@ -265,13 +265,7 @@
               </div>
             </div>
             
-  <!-- ______________ EMBEDDING VIDEO TRIALS _________________-->
-            <!-- <div class="col-lg-8 col-sm-12">
-              <iframe width="700" height="500"
-              src="https://www.youtube.com/watch?v=_PGEMFh86Qk">
-            </iframe>       --> 
-
-            <div class="col-lg-8 col-sm-12">
+             <div class="col-lg-8 col-sm-12">
             <iframe width="700" height="450" src="https://www.youtube.com/embed/vDZs2TxhqsM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>   
 
@@ -337,9 +331,9 @@
         <hr />
 
         <!-- If you give me some credit, will be huge for me :) -->
-        <p class="footer__text">
+        <!-- <p class="footer__text">
           © 2020 - Template by <a href="https://github.com/cobidev" target="_blank"> Jacobo Martínez</a>
-          </a>
+          </a> -->
         </p>
 
         <!-- Remove this paragraph once you setup your custom portfolio -->
