--- a/src/template.html
+++ b/src/template.html
@@ -88,7 +88,8 @@
                 Through advanced study in an interdisciplinary environment, I am eager to grow into a more 
                 autonomous and critical thinker who asks innovative, tangible, and defined questions in specific
                 research contexts.
-                <br>
+                <br/>
+                <br/>
                 In between work and study, I deeply engage with the arts and travel. An avid piano player
                 of classical and soundtrack music, I enjoy mixing classical elements into contemporary pieces in 
                 songwriting. In a different manner of songwriting, I often translate Chinese songs or mimic poetry
@@ -314,26 +315,26 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/selinawu00" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
-          </https://www.linkedin.com/in/selinawu00/>
+          </a>
           
-          <a href="#!" target="_blank">
+          <a href="https://github.com/WuSelina" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
-          </https://github.com/WuSelina>
+          </a>
 
-          <a href="#!" target="_blank">
+          <a href="https://www.facebook.com/selina.wu.71" target="_blank">
             <i class="fa fa-facebook fa-inverse"></i>
-          </https://www.facebook.com/selina.wu.71>
+          </a>
         
         </div>
 
         <hr />
 
         <!-- If you give me some credit, will be huge for me :) -->
-        <!-- <p class="footer__text">
+        <p class="footer__text">
           © 2020 - Template by <a href="https://github.com/cobidev" target="_blank"> Jacobo Martínez</a>
-          </a> -->
+          </a>
         </p>
 
         <!-- Remove this paragraph once you setup your custom portfolio -->
